# Generative-AI

Projects/AI-Travel-Agent/: AI_Travel_Agent_streamlit.py  requirements.txt
Projects/HF-transformers-basic-tasks/: 01_text_to_image.ipynb  02_image_to_image.ipynb  03_03_image_classification-Copy1.ipynb  03_image_classification.ipynb  04_image_to_text.ipynb  05_question_answering.ipynb  06_sentence_similarity.ipynb  07_visual_question_answering.ipynb  08_08_inductor_backend_Stable_diffusion.ipynb  08_inductor_backend_Stable_diffusion.ipynb  09_llava_image_processor.ipynb  Readme.md
Projects/Llamacpp-intel-docker/: Dockerfile  README.md
Projects/PDF-to-Audio-RAG/: PDF_to_Audio_RAG.ipynb  Readme.md  pyproject.toml
Projects/Podcast-RAG/: Podcast_RAG.ipynb  Readme.md  pyproject.toml
